click function works but defaults to animate, still needs form to add buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,11 +23,11 @@ button {
     border: solid 2px green;
 }
 
-.aGreatMan {
+.gifMeUp {
+    
     float: left;
     margin: 1% 1% 1% 1%;
 }
-
 
 
 
