--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,27 +7,47 @@
     box-sizing: border-box;
 }
 
+.movieGif {
+    background: darkblue;
+}
+
+.titleMe {
+    font-size: 46px;
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px #ff0000;
+    font-family: 'Rammetto One', cursive;
+    margin-top: 2%;
+}
+
+.r2c2 {
+    height: 17%;
+    border: solid 2px yellow;
+    border-radius: 12px;
+    background: lightgray;   
+    margin-top: 1%;
+}
+
+.addAmovie {
+    margin-bottom: -6%;
+    padding-top: 2%;
+    color: yellow;
+    text-shadow: 2px 1px black;
+}
+
 .buttonMe {
     border: solid 1px darkgray;
-    background: lightgray
-   
+    background: rgb(231, 230, 230);   
+}
+
+.r1c1 {
+    text-align: center;
 }
 
 button {
-    margin: 1% 0 1% 0%;
     border-radius: 12px;
     background: darkblue;
     color: white;
-}
-
-
-/*
-.gifMe {
-    border: solid 2px red;
-}
-*/
-.inputMe {
-    margin-top: 3%;
 }
 
 .gifMeUp {
@@ -36,11 +56,13 @@ button {
 }
 
 .clickMe {
+    
+    margin: -2% 0 2% 0;
     background: darkblue;
     color: white;
 }
 
-
-
-
-
+input[type=text] {
+    width: 100%;
+    box-sizing: border-box;
+}
