Updated CSS for addAmovie div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,7 @@
 .addAmovie {
     margin-bottom: -6%;
     padding-top: 2%;
-    color: yellow;
-    text-shadow: 1px 1px black;
+    color: darkblue;
 }
 
 .buttonMe {
